# Heroes_P314

./: CMakeLists.txt  Game.h  GameConfig.h  God.h  Hero.h  HeroFactory.h  Mage.h  Warrior.h  class_diagram.plantuml  main.cpp
Game/: Game.h  GameConfig.h  IGame.h  game.config
HeroConfig/: HeroConfig.h  HeroesConfig.h
HeroFactory/: HeroFactory.h  HeroType.h
Heroes/: God.h  Hero.h  Mage.h  Warrior.h
Logger/: ILogger.h  LogToConsole.h  LogToFile.h
